--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
 
 <body>
 
-    <header class="first-header">
-        <div class="container glavniy-v-menu z">
-            <a href="">
-                <p class="logotip"><span class="logo">Web</span><span class="studio1">Studio</span></p>
+    <header class="header">
+        <div class="container  header__box">
+            <a class="header__link" href="">
+                <p class="header__logo">Web<span class="header__logo--color">Studio</span></p>
             </a>
 
 
-            <nav class="otstyp-v-hedere-ot-logo">
-                <ul class="menu list">
-                    <li class="vmestea"> <a class="studias first-page" href="./index.html">Студия</a> </li>
-                    <li class="vmestea"> <a class="portfolio" href="./portfolio.html">Портфолио </a></li>
-                    <li class="vmestea"> <a class="kontakt" href="">Контакты</a></li>
+            <nav class="navbar">
+                <ul class="navbar__list list">
+                    <li class="navbar__item"> <a class="navbar__link  navbar__link--active" href="./index.html">Студия</a> </li>
+                    <li class="navbar__item"> <a class="navbar__link" href="./portfolio.html">Портфолио </a></li>
+                    <li class="navbar__item"> <a class="navbar__link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="silki  j list">
-                <li class="vmeste "> <a class="pochta " href="mailto:info@devstudio.com"><svg class="convert"  width="16"
+            <ul class="header-list list">
+                <li class="header-list__item "> <a class="header-list__link " href="mailto:info@devstudio.com"><svg class="header-list__icon"  width="16"
                     height="12" ><use href="img/symbol-defs.svg#icon-header-logo-a"  ></use></svg>info@devstudio.com</a> </li>
-                <li class="vmeste "> <a class="nomer " href="tel:+380961111111"><svg class="tel" width="16"
+                <li class="header-list__item "> <a class="header-list__link " href="tel:+380961111111"><svg class="header-list__icon" width="16"
                     height="12"  ><use href="img/symbol-defs.svg#icon-header-logo-b"></use></svg>+38 096 111 11 11</a> </li>
             </ul>
         </div>
