--- a/portfolio.html
+++ b/portfolio.html
@@ -160,41 +160,41 @@
         </section>
     </main>
 
-    <footer class="nogi  ">
-        <div class="container nogi-otstypi">
-          <div class="rebenok">
-            <a class="logotip" href="">
-                <span class="logo">Web</span><span class="st">Studio</span>
+    <footer class="footer">
+        <div class="container footer__box">
+          <div class="adress-and-logo-box">
+            <a class="adress-and-logo-box__link" href="">
+                <span class="adress-and-logo-box--Color">Web</span><span class="adress-and-logo-box--color">Studio</span>
 
             </a>
-            <address class="adres">
-                <p>г. Киев, пр-т Леси Украинки, 26Б</p>
-                <ul class=" dannie list">
-                    <li class="hfl"> <a class="pochta1" href="mailto:info@devstudio.com">info@example.com</a></li>
-                    <li class="nomer-one"> <a class="nomer1" href="tel:+380991111111">+380991111111</a></li>
+            <address class=" address">
+                <p class="address__text">г. Киев, пр-т Леси Украинки, 26Б</p>
+                <ul class=" address__list list">
+                    <li class="address__item"> <a class="address__link" href="mailto:info@devstudio.com">info@example.com</a></li>
+                    <li class="address__item"> <a class="address__link" href="tel:+380991111111">+380991111111</a></li>
                 </ul>
             </address>
             </div>
-            <div class="rebenok hbh">  
-           <h3 class="prisoedinis">присоединяйтесь</h3>
-<ul class="list footer-icon">
+            <div class="box-with-messengers">  
+           <h3 class="box-with-messengers__title">присоединяйтесь</h3>
+<ul class="list box-with-messengers__list ">
   
-    <li class="obertka-footer-icon">   <a class="silki-na-sami-obertka-footer-icon"> <svg class="sami-obertka-footer-icon"  width="20"
+    <li class="box-with-messengers__item">   <a class="box-with-messengers__link"> <svg class="box-with-messengers__icon"  width="20"
         height="20"><use href="img/symbol-defs.svg#icon-logo-footer-a" ></use></svg></a></li>
-    <li class="obertka-footer-icon">   <a class="silki-na-sami-obertka-footer-icon"> <svg class="sami-obertka-footer-icon"  width="20"
+    <li class="box-with-messengers__item">   <a class="box-with-messengers__link"> <svg class="box-with-messengers__icon"  width="20"
         height="16.25"><use href="img/symbol-defs.svg#icon-logo-footer-b" ></use></svg></a></li>
-    <li class="obertka-footer-icon">   <a class="silki-na-sami-obertka-footer-icon"> <svg class="sami-obertka-footer-icon"  width="10"
+    <li class="box-with-messengers__item">   <a class="box-with-messengers__link"> <svg class="box-with-messengers__icon"  width="10"
         height="20"><use href="img/symbol-defs.svg#icon-logo-footer-c" ></use></svg></a></li>
-    <li class="obertka-footer-icon">   <a class="silki-na-sami-obertka-footer-icon"> <svg class="sami-obertka-footer-icon"  width="20"
+    <li class="box-with-messengers__item">   <a class="box-with-messengers__link"> <svg class="box-with-messengers__icon"  width="20"
         height="20"><use href="img/symbol-defs.svg#icon-logo-footer-d" ></use></svg></a></li>
 
 </ul>
 </div>
-<div class="prinatie-yvedomleniy"> 
-    <h3 class="podpiska">Подпишитесь на рассылку</h3>
-<form class="rassilka-pisem"> 
- <input class="input-footer" type="email" name="email " placeholder="E-mail" >
-         <button class="button-in-footer" type="button">Подписаться<svg class="samolet" width="24" height="24"><use href="img/icons.svg#icon-icon-send" ></use></svg></button>  
+<div class="footer-form-box"> 
+    <h3 class="footer-form-box__title">Подпишитесь на рассылку</h3>
+<form class="footer-form"> 
+ <input class="footer-form__input" type="email" name="email " placeholder="E-mail" >
+         <button class="footer-form__button" type="button">Подписаться<svg class="footer-form__icon" width="24" height="24"><use href="img/icons.svg#icon-icon-send" ></use></svg></button>  
 </form>
 
 </div>
