--- a/portfolio.html
+++ b/portfolio.html
@@ -47,107 +47,107 @@
         <section class="section">
 
 
-            <div class="container fz">
-                <ul class="knopka for-otstyp list">
-                    <li class="knopki-portfolio"> <button class="name" type="button">Все</button></li>
-                    <li class="knopki-portfolio"> <button class="name" type="button">Веб-сайты</button></li>
-                    <li class="knopki-portfolio"> <button class="name" type="button">Приложения</button></li>
-                    <li class="knopki-portfolio"> <button class="name" type="button">Дизайн</button></li>
-                    <li class="knopki-portfolio"> <button class="name" type="button">Маркетинг</button></li>
+            <div class="container ">
+                <ul class=" button-list list">
+                    <li class="button-list__item"> <button class="button-list__button" type="button">Все</button></li>
+                    <li class="button-list__item"> <button class="button-list__button" type="button">Веб-сайты</button></li>
+                    <li class="button-list__item"> <button class="button-list__button" type="button">Приложения</button></li>
+                    <li class="button-list__item"> <button class="button-list__button" type="button">Дизайн</button></li>
+                    <li class="button-list__item"> <button class="button-list__button" type="button">Маркетинг</button></li>
 
                 </ul>
 
-                <ul class="nahi-roboti list">
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href="">
-                            <div class="kard"> 
+                <ul class="kard-set list">
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href="">
+                            <div class="kard-set__box"> 
                               <div class="overflo"><img src="img/a.jpg" alt="kartinka" width="370" />   <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>  
                              
-                                <div class="pr">
-                                    <h2 class="pd">Технокряк</h2>
-                                    <p class="ps">Веб-сайт</p>
+                                <div class="description-box">
+                                    <h2 class="description-box__title">Технокряк</h2>
+                                    <p class="description-box__text">Веб-сайт</p>
                                 </div>
                             </div>
                         </a>
 
 
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""> <div class="kard"> 
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""> <div class="kard-set__box"> 
                             <div class="overflo"> <img src="img/b.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
-                            <div class="pr">
-                                <h2 class="pd">Постер New Orlean vs Golden Star</h2>
-                                <p class="ps">Дизайн</p>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="description-box__text">Дизайн</p>
                             </div>
                         </div>
                         </a>
 
 
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""><div class="kard"><div class="overflo"><img src="img/c.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""><div class="kard-set__box"><div class="overflo"><img src="img/c.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
                             
-                            <div class="pr">
-                                <h2 class="pd">Ресторан Seafood</h2>
-                                <p class="ps">Приложение</p>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Ресторан Seafood</h2>
+                                <p class="description-box__text">Приложение</p>
                             </div>
                         </div>
                         </a>
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""><div class="kard"> <div class="overflo"> <img src="img/d.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
-                            <div class="pr">
-                                <h2 class="pd">Проект Prime</h2>
-                                <p class="ps">Маркетинг</p>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""><div class="kard-set__box"> <div class="overflo"> <img src="img/d.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Проект Prime</h2>
+                                <p class="description-box__text">Маркетинг</p>
                             </div>
                         </div>
                         </a>
 
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""> <div class="kard"> <div class="overflo"><img src="img/f.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div> 
-                            <div class="pr">
-                                <h2 class="pd">Проект Boxes</h2>
-                                <p class="ps">Приложение</p>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""> <div class="kard-set__box"> <div class="overflo"><img src="img/f.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div> 
+                            <div class="description-box">
+                                <h2 class="description-box__title">Проект Boxes</h2>
+                                <p class="description-box__text">Приложение</p>
                             </div>
                             </div>
                         </a>
 
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""> <div class="kard"><div class="overflo"><img src="img/g.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
-                            <div class="pr">
-                                <h2 class="pd">Inspiration has no Borders</h2>
-                                <p class="ps">Веб-сайт</p>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""> <div class="kard-set__box"><div class="overflo"><img src="img/g.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Inspiration has no Borders</h2>
+                                <p class="description-box__text">Веб-сайт</p>
                             </div>
                         </div> 
                         </a>
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href="">  <div class="kard"><div class="overflo"> <img src="img/h.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
-                            <div class="pr">
-                                <h2 class="pd">Издание Limited Edition</h2>
-                                <p class="ps">Дизайн</p>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href="">  <div class="kard-set__box"><div class="overflo"> <img src="img/h.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Издание Limited Edition</h2>
+                                <p class="description-box__text">Дизайн</p>
                             </div>
                         </div>
                         </a>
 
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""> <div class="kard"><div class="overflo"> <img src="img/i.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
-                            <div class="pr">
-                                <h2 class="pd">Проект LAB</h2>
-                                <p class="ps">Маркетинг</p>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""> <div class="kard-set__box"><div class="overflo"> <img src="img/i.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Проект LAB</h2>
+                                <p class="description-box__text">Маркетинг</p>
                             </div>
                         </div>
                         </a>
 
                     </li>
-                    <li class="ophaya-tabl">
-                        <a class="class-silki-na-kart-prob" href=""> <div class="kard"><div class="overflo"> <img src="img/k.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
-                            <div class="pr">
-                                <h2 class="pd">Growing Business</h2>
-                                <p class="ps">Приложение</p>
+                    <li class="kard-set__item">
+                        <a class="kard-set__item" href=""> <div class="kard-set__box"><div class="overflo"> <img src="img/k.jpg" alt="kartinka" width="370" /> <div class="containerstextom"><p class="textnaportfolionakartochki">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
+                            <div class="description-box">
+                                <h2 class="description-box__title">Growing Business</h2>
+                                <p class="description-box__text">Приложение</p>
                             </div>
                         </div>
                         </a>
